# agent-notes

./: .env.example  .gitignore  pyproject.toml
langgraph/: 01-agent-tool.ipynb  02-parallel.ipynb  03-multi-agent-supervisor.ipynb  03-multi-agent.ipynb  04-human-in-the-loop-review-node.ipynb  04-human-in-the-loop.ipynb  README.md
mcp/: client.py  client_streamable.py  langgraph_mcp_01.py  langgraph_mcp_02.py  server.py  server_db.py  server_streamable.py  server_video.py  server_weather.py
whisper/: video_yt.ipynb
